# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  pyproject.toml
backend/: ai_generator.py  app.py  search_tools.py  test_outline_tool.py
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_demo.py  test_unit.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh
